# cpp_statecharts

./: .bazelrc  .clang-tidy  .cspell.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MODULE.bazel  Makefile  README.md  example_main  requirements.txt
.github/workflows/: build.yml  ci.yml  cleanup.yml  pre-commit.yml
pre-commit-hooks/: run-iwyu-tool.py  sort-cspell-words.py
src/: CMakeLists.txt  example_main.cpp
src/cpp_statecharts/: BUILD  cpp_statecharts.hpp
src/cpp_statecharts/include/cpp_statecharts/: cpp_statecharts.hpp
src/cpp_statecharts/src/: cpp_statecharts.cpp
src/examples/: BUILD  example_main.cpp
